# careerai

./: .gitignore  PLANNING.md  README.md  TASK.md  pyproject.toml
docs/: DATA_FORMATS.md  api.md  architecture.md  data_model.md
scripts/: load_to_qdrant.py  test_qdrant.py
src/: app.py  main.py
src/agents/: resume_agent.py
src/logic/: backend_interface.py  data_loader.py  functions.py  query_engine.py
src/ui/: chat.py  profile.py  resume_generator.py  utils.py
tests/ui/: test_chat.py  test_profile.py  test_utils.py
